apps/base/commafeed/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: commafeed
  # labels:
  #   app.kubernetes.io/component: monitoring
