apps/base/commafeed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commafeed
  labels:
    app.kubernetes.io/name: commafeed
    app.kubernetes.io/version: "7.0.0"
    app.kubernetes.io/component: app
    app.kubernetes.io/part-of: commafeed
    app.kubernetes.io/managed-by: FluxCD
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: commafeed
  template:
    metadata:
      labels:
        app.kubernetes.io/name: commafeed
        app.kubernetes.io/version: "7.0.0"
        app.kubernetes.io/component: app
        app.kubernetes.io/part-of: commafeed
        app.kubernetes.io/managed-by: FluxCD
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
        - name: commafeed
          image: athou/commafeed:7.0.0-postgresql
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8082
              protocol: TCP
      restartPolicy: Always
