apps/base/commafeed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commafeed
spec:
  selector:
    app.kubernetes.io/name: commafeed
  type: ClusterIP
  ports:
    - port: 8082
      protocol: TCP
      targetPort: 8082
