apps/base/commafeed/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: commafeed-http-route
spec:
  parentRefs:
    - name: tls-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "commafeed.home.arpa"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: commafeed
          port: 8082
