apps/base/commafeed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commafeed-ingress
  labels:
    app.kubernetes.io/name: commafeed
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
    ingress.cilium.io/loadbalancer-mode: shared
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - commafeed.homelab.local
    secretName: commafeed-cert
  rules:
  - host: commafeed.homelab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: commafeed
            port:
              number: 8082
