apps/base/commafeed/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: commafeed-network-policy
  namespace: commafeed
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: commafeed
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: app
            app.kubernetes.io/part-of: commafeed
      toPorts:
        - ports:
            - port: "5432"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: database
            app.kubernetes.io/part-of: commafeed
      toPorts:
        - ports:
            - port: "5432"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
